<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NP</string>
    <string name="action_settings">Settings</string>
    <string name="hyperlink">http://www.cnn.com/</string>
    <string name="category_prompt">Category</string>
    <string name="search_prompt">select</string>
    
    <string name="Prompt">Categories</string>
    <string name="addMedia">Add Media</string>
    <string name="dispMedia">Display Media</string>
    
    <string-array name="Entries">
        <item >Canada</item>
        <item >U.S.A.</item>
        <item >India</item>
    </string-array>    
    
    <string name="CountryName">Country</string>
    <string name="MediaName">Media Name</string>
    
    <string name="MainURL">Main URL</string>
    <string name="searchUrl">Search URL</string>
    
     <string name="mediaLogo">Media Logo</string>
    <string name="browse">Browse</string>
    <string name="head1">Header #1</string>
    <string name="url1">URL #1</string>
    <string name="head2">Header #2</string>
    <string name="url2">URL #2</string>
    <string name="head3">Header #3</string>
    <string name="url3">URL #3</string>
    <string name="opt">* Optional</string>
    <string name="insert">insert</string>
    
    
    
    
    <string-array name="search_array">
        <item>CNN</item>
        <item>BBC</item>
        <item>NBC</item>
    </string-array>
    
    <string-array name="category_arrays_01">
        <item>Category</item>
        <item>News</item>
        <item>Sports</item>
        <item>World</item>
    </string-array>
    
    <string-array name="category_arrays_02">
        <item>Category</item>
        <item>News</item>
        <item>Sports</item>
        <item>Travel</item>
    </string-array>
    
    <string-array name="category_arrays_03">
        <item>Category</item>
        <item>News</item>
        <item>Autos</item>
        <item>Health</item>
    </string-array>
    
    <string-array name="category_arrays_04">
        <item>Category</item>
        <item>News</item>
        <item>Politics</item>
        <item>Business</item>
    </string-array>
    
    <string-array name="category_arrays_05">
        <item>Category</item>
        <item>Business</item>
        <item>World</item>
        <item>Living</item>
    </string-array>
    
    <string-array name="category_arrays_06">
        <item>Category</item>
        <item>Justice</item>
        <item>Tech</item>
        <item>Travel</item>
    </string-array>
    
    <string-array name="category_arrays_07">
        <item>Category</item>
        <item>News</item>
        <item>Weather</item>
        <item>Travel</item>
    </string-array>
    
    <string-array name="category_arrays_08">
        <item>Category</item>
        <item>News</item>
        <item>Lifestyle</item>
        <item>Entertainment</item>
    </string-array>
    
    <string-array name="category_arrays_09">
        <item>Category</item>
        <item>Life</item>
        <item>Sports</item>
        <item>Business</item>
    </string-array>
    
    <string-array name="category_arrays_10">
        <item>Category</item>
        <item>News</item>
        <item>Sports</item>
        <item>Blogs</item>
    </string-array>
    
    <string-array name="category_arrays_11">
        <item>Category</item>
        <item>News</item>
        <item>Politics</item>
        <item>Science</item>
    </string-array>
    
    <string-array name="category_arrays_12">
        <item>Category</item>
        <item>News</item>
        <item>Investing</item>
        <item>Arts</item>
    </string-array>
    
    <string-array name="category_arrays_13">
        <item>Category</item>
        <item>News</item>
        <item>Money</item>
        <item>Opinion</item>
    </string-array>
    
    <string-array name="category_arrays_14">
        <item>Category</item>
        <item>News</item>
        <item>Maps</item>
        <item>Finance</item>
    </string-array>
    
    <string-array name="category_arrays_15">
        <item>Category</item>
        <item>News</item>
        <item>Life</item>
        <item>Driving</item>
    </string-array>
    
    <string-array name="category_arrays_16">
        <item>Category</item>
        <item>Shows</item>
        <item>Shop</item>
        <item>Schedule</item>
    </string-array>

    <string name="app_logo_top">NEWS - APP</string>
    <string name="app_logo_bottom">Technology\nCulture\nSport\nMusic</string>
    <string name="app_team_group">COMP231 - SUMMER - 2013\n
        Fahmi B, Eshaq\nHaroon Munsif\nClaudia Quezada\nHarry Dholakiya\nEric Lai</string>
    
    <string 
        name="help">Help Screen</string>
    <string 
        name="searchmedia">Search Media</string>
    <string 
        name="canadaunderconstruction">Under Construction</string>
     <string 
        name="usunderconstruction">US Under Construction</string>
      <string 
        name="indiaunderconstruction">India Under Construction</string>
      
      <string 
        name="database_created">Database has been created or updated!!</string>
      <string name="title_activity_login">LoginActivity</string>
</resources>
